# VulkanEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
examples/: CMakeLists.txt  debug_render_graph.cpp  particles.cpp  raw_draw.h  render_graph_draw.cpp  triangle.cpp  triangle_with_ui.cpp  uniforms.cpp  vertex_index_buffers.cpp  window.cpp
examples/resources/shaders/: basic.frag  basic.vert  full_screen.vert  particles.comp  particles.frag  particles.vert  test_full_screen.frag
include/: common.h  glam_hash_redefine.h  hash_combine.h  vk_collect.h  vulkan_engine.h
include/collections/: framed_object_pool.h  framed_storage.h  handles.h  object_pool.h  resource_storage.h
include/core/: device.h  distinct_storage.h  handles.h  helper_functions.h  messages.h  object_pool.h  render_context.h  swap_chain.h  window.h
include/core/feature_sets/: allocator_feature.h  command_pool.h  compute.h  debugging_feature.h  descriptor_pool.h  device.h  dynamic_uniforms.h  feature_set.h  frame_dispatcher.h  graphics_feature.h  imgui_ui.h  object_pool.h  pipeline_builder.h  present_feature.h  registry.h  resources.h  shader_loader.h  stable_frame_rate.h  swap_chain.h  synchronization.h  window.h
include/core/feature_sets/graph/: clear_image_node.h  compute_node.h  graphics_node.h  imgui_node.h  node_dependency.h  present_node.h  render_graph.h  render_node.h  render_node_with_bindings.h
include/core/pipelines/: graphics_pipeline.h
include/core/resources/: access_type.h  buffer.h  buffer_region.h  frame_buffer.h  image.h  image_usage.h  poolable_item.h  resource_id.h  resource_memory.h  sampler.h  subresources.h
include/core/shaders/: define_attachments.h  define_scalar_atributes.h  define_shader_bindings.h  descriptor_identity.h  gen_attachments.h  gen_bindings.h  gen_vertex_data.h  reset_attachment_defines.h  shader_common.h  shader_module.h  shader_source.h  shader_stage.h
include/ui/: imgui_ui.h  vulkan_engine_ui.h
src/: common.cpp  common.h  main.cpp  vk_collect.h
src/core/: device.cpp  device.h  frame_dispatcher.cpp  helper_functions.cpp  render_context.cpp  render_context.h  swap_chain.cpp  swap_chain.h  window.cpp  window.h
src/core/feature_sets/: allocator_feature.cpp  command_pool.cpp  compute.cpp  debugging_feature.cpp  descriptor_pool.cpp  device.cpp  dynamic_uniforms.cpp  feature_set.cpp  graphics_feature.cpp  imgui_ui.cpp  pipeline_builder.cpp  present_feature.cpp  registry.cpp  resources.cpp  shader_loader.cpp  stable_frame_rate.cpp  swap_chain.cpp  synchronization.cpp  window.cpp
src/core/feature_sets/graph/: clear_image_node.cpp  imgui_node.cpp  present_node.cpp  render_graph.cpp
src/core/pipelines/: graphics_pipeline.cpp
src/core/resources/: buffer.cpp  frame_buffer.cpp  image.cpp  image.h  poolable_item.cpp  resource_id.cpp  resource_memory.cpp  sampler.cpp
src/core/shaders/: shader_module.cpp  shader_source.cpp
src/ui/: imgui_node.cpp  imgui_ui.cpp
